# readme-badges.py

./: README.md  setup.cfg
readme_badges/: __init__.py
readme_badges/pypi/: __init__.py
