# https://pypi.org/project/setupcfg-generator/
[metadata]
name = readme-badges
version = 2019.03.07
url = https://github.com/looking-for-a-job/readme-badges.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = readme badges

[options]
install_requires = 
	public
	setupcfg
	setuptools
	shields
packages = 
	readme_badges
	readme_badges.github
	readme_badges.npm
	readme_badges.pypi
